<resources>
    <string name="tab_search">Search</string>
    <string name="tab_starred">Starred</string>
    <string name="tab_settings">Settings</string>

</resources>
